@@ -2,6 +2,10 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+    New feature:
+    
+    - ->skip_until_done skips items until the given Future is done
+
 0.035     2019-01-02 01:37:38+08:00 Asia/Kuala_Lumpur
     No new features.
 
